--- a/Ejecutivo/index.html
+++ b/Ejecutivo/index.html
@@ -8,7 +8,7 @@
  
   <title>UI Login</title>
 </head>
-   <div class=" Bienvenidos">
+   <div class=" Bienvenido todos">
     <img src="Foto1.png">
          <div class="Login">
          <h2>Bienvenido</h2>
