pagina de inicio

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, ">
+    <title>Inicio</title>
     <link rel="stylesheet" href="estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,6 +14,7 @@
         <div class="contenedor-textos">
             <h1 class="titulo">COMIENZA A ADMINISTRAR TUS CUENTAS</h1>    
             <div class="boton"><a href="#" class="cta">Empiece ahora</a></div>
+            <div class="Link"><h4><a href="#">Ya tengo cuenta</a></h4></div>
         </div>
         <div class="wave1">
             <img src="ilustraciones/wave-up.svg" alt="">
