--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <main class="contenedor">
         <div class="contenedor-textos">
-            <h1 class="titulo">COMIENZA A ADMINISTRAR TUS CUENTAS</h1>    
+            <h1 class="titulo"><font color="#FA4848">COMIENZA</font> A ADMINISTRAR TUS CUENTAS</h1>    
             <div class="boton"><a href="#" class="cta">Empiece ahora</a></div>
-            <div class="Link"><h4><a href="#">Ya tengo cuenta</a></h4></div>
+            <div class="link"><h4><a href="#">Ya tengo cuenta</a></h4></div>
         </div>
         <div class="wave1">
             <img src="ilustraciones/wave-up.svg" alt="">
