--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, ">
-    <title>Inicio</title>
+    <title>FinanceFlex</title>
     <link rel="stylesheet" href="estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,8 +13,8 @@
     <main class="contenedor">
         <div class="contenedor-textos">
             <h1 class="titulo"><font color="#FA4848">COMIENZA</font> A ADMINISTRAR TUS CUENTAS</h1>    
-            <div class="boton"><a href="#" class="cta">Empiece ahora</a></div>
-            <div class="link"><h4><a href="#">Ya tengo cuenta</a></h4></div>
+            <div class="boton"><a href="#" class="cta">Comienza ahora</a></div>
+            <div class="link"><h4><a href="#">No tengo cuenta</a></h4></div>
         </div>
         <div class="wave1">
             <img src="ilustraciones/wave-up.svg" alt="">
