inicio sesión y registro

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, ">
     <title>FinanceFlex</title>
-    <link rel="shortcut icon" href="ilustraciones/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,14 +14,13 @@
     <main class="contenedor">
         <div class="contenedor-textos">
             <h1 class="titulo"><font color="#FA4848">COMIENZA</font> A ADMINISTRAR TUS CUENTAS</h1>    
-            <div class="boton"><a href="#" class="cta">Comienza ahora</a></div>
-            <div class="link"><h4><a href="#">No tengo cuenta</a></h4></div>
+            <div class="boton"><a href="registro.html" class="cta">Comienza ahora</a></div>
         </div>
         <div class="wave1">
-            <img src="ilustraciones/wave-up.svg" alt="">
+            <img src="img/wave-up.svg" alt="">
         </div>
         <div class="contenedor-imagen-grupo">
-            <img src="ilustraciones/Group 1.svg" alt="">
+            <img src="img/Group 1.svg" alt="">
         </div>
             
     </main>
