--- a/registro.html
+++ b/registro.html
@@ -59,7 +59,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, laboriosam.</p>
                     <button class="btn transparent" id="sign-up-btn">Registrate</button>
                 </div>
-                <img src="img/Character 1.png" class="image" alt="">
+                <img src="img/Character_2.png" class="image" alt="Imagen de ladaz3d en Freepik">
             </div>
             <div class="panel right-panel">
                 <div class="content">
