Reacomodo de carpetas y archivos

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FinanceFlex</title>
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="shortcut icon" href="./public/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./public/css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1+Code:wght@300;400&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/6dc1722754.js" crossorigin="anonymous"></script>
@@ -13,7 +13,7 @@
 <body>
     <div class="cont">
         <div class="navbar">
-            <img src="img/logo_transparent-white.png" class="logo">
+            <img src="./public/img/logo_transparent-white.png" class="logo">
             <nav>
                 <ul id="menuList">
                     <li><a href="">INICIO</a></li>
@@ -21,7 +21,7 @@
                     <li><a href="">ACERCA DE</a></li>
                 </ul>
             </nav>
-            <img src="img/menu.png" class="menu" onClick="togglemenu()">
+            <img src="./public/img/menu.png" class="menu" onClick="togglemenu()">
         </div>
         <div class="row">
             <div class="col-1">
@@ -31,7 +31,7 @@
                 <button type="button"><a href="registro.html">Empieza Ya</button></a>
             </div>
             <div class="col-2">
-                <img src="img/Character 1.png" class="person">
+                <img src="./public/img/Character 1.png" class="person">
                 <div class="color-box"></div>
             </div>
         </div>
