--- a/registro.html
+++ b/registro.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FiannceFlex</title>
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="estilos.css".css">
+    <link rel="shortcut icon" href="./public/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./public/css/estilos.css".css">
     <script src="https://kit.fontawesome.com/6dc1722754.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -59,7 +59,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, laboriosam.</p>
                     <button class="btn transparent" id="sign-up-btn">Registrate</button>
                 </div>
-                <img src="img/Character_2.png" class="image" alt="Imagen de ladaz3d en Freepik">
+                <img src="./public/img/Character_2.png" class="image" alt="Imagen de ladaz3d en Freepik">
             </div>
             <div class="panel right-panel">
                 <div class="content">
@@ -67,11 +67,11 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, laboriosam.</p>
                     <button class="btn transparent" id="sign-in-btn">Inicia sesión</button>
                 </div>
-                <img src="img/mobile_pay.svg" class="image" alt="">
+                <img src="./public/img/mobile_pay.svg" class="image" alt="">
             </div>
         </div>
     </div>
 
-    <script src="app.js"></script>
+    <script src="./public/js/app.js"></script>
 </body>
 </html>
