--- a/index.html
+++ b/index.html
@@ -50,6 +50,52 @@
                 }
         }
     </script>
-    
+    <div class="container-n">
+        <section class="nosotros">
+            <h1> FinanceFlex </h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores hic dicta facilis maiores alias corporis reiciendis, consequuntur facere suscipit omnis.</p>
+            <h2>Contamos con...</h2>
+        </section>
+        <section class="hacer">
+            <div class="col-1-item">
+                <div class="item">
+                    <img src="./public/img/money.png" alt="">
+                    <h1> Administrar</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                </div>
+                <div class="item">
+                    <img src="./public/img/deposit.png" alt="">
+                    <h1> Depositar</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                </div>
+            </div>
+            <div class="col-2-item">
+                <div class="item">
+                    <img src="./public/img/fees.png" alt="">
+                    <h1> Transacciones</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                </div>
+                <div class="item">
+                    <img src="./public/img/growth.png" alt="">
+                    <h1> Prestamos</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                </div>
+            </div>
+        </section>
+    </div>
+     <footer>
+        <div class="footer-content">
+            <h3>FinanceFlex</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio quam molestias fugit nesciunt explicabo nisi.</p>
+            <ul class="social">
+                <li><a href=""><i class="fa-solid fa-at"></i></a></li>
+                <li><a href=""><i class="fa-brands fa-twitter"></i></a>
+                <li><a href=""><i class="fa-brands fa-github"></i></a>
+            </ul>
+            <div class="footer-bottom">
+                <p>Copyright &copy;2022 FinanceFlex.</p>
+            </div>
+        </div>
+     </footer>
 </body>
 </html>
