navbar del usermain

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav>
                 <ul id="menuList">
                     <li><a href="">INICIO</a></li>
-                    <li><a href="#nosotros">NOSOTROS</a></li>
+                    <li><a href="#">NOSOTROS</a></li>
                     <li><a href="">ACERCA DE</a></li>
                 </ul>
             </nav>
