--- a/main.html
+++ b/main.html
@@ -28,5 +28,14 @@
             <div class="linea"></div>
         </nav>
     </section>
+    <section class="banner">
+        <p>banner</p>
+    </section>
+    <section class="tarjetas">
+        <p>tarjetas</p>
+    </section>
+    <section class="transacciones">
+        <p>transacciones</p>
+    </section>
 </body>
 </html>
