trabajando en navbar

--- a/registro.html
+++ b/registro.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FiannceFlex</title>
     <link rel="shortcut icon" href="./public/img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./public/css/estilos.css".css">
+    <link rel="stylesheet" href="./public/css/estilos.css">
     <script src="https://kit.fontawesome.com/6dc1722754.js" crossorigin="anonymous"></script>
 </head>
 <body>
