--- a/main.html
+++ b/main.html
@@ -9,33 +9,31 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1+Code:wght@300;400&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/6dc1722754.js" crossorigin="anonymous"></script>
+    <script defer src="public/js/navbar.js"></script>
 </head>
 <body>
-    <section class="header">
-        <nav>
-            <a href="main.html"><img src="public/img/logito.png" alt=""></a>
-            <h1>FinanceFlex</h1>
-            <div class="nav-links">
-                <ul>
-                    <li><a href="">Mi apartado</a></li>
-                    <li><a href="">Prestamos</a></li>
-                    <li><a href="">Ayuda</a></li>
-                    <li><a href="">Configuración</a></li>
+    <header class="header">
+        <img class="logo" src="public/img/logito.png" alt="">
+        <h1 class="h1">
+            <a href="#" class="a">FinanceFlex</a>
+        </h1>
+        <button class="button">
+          <svg class="svg" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+            </svg>
+        </button>
+        <nav class="nav">
+            <div class="container">
+                <ul class="ul">
+                    <li class="li"><a href="#" class="a">Mi apartado</a></li>
+                    <li class="li"><a href="#" class="a">Prestamos</a></li>
+                    <li class="li"><a href="#" class="a">Ayuda</a></li>
+                    <li class="li"><a href="#" class="a">Configuración</a></li>
+                    <li class="welcome">¡Bienvenido Gilberto!</li>
                 </ul>
             </div>
-            <p>¡Bienvenido!</p>
-            <!-- Aguí va la imagen del usuario-->
             <div class="linea"></div>
         </nav>
-    </section>
-    <section class="banner">
-        <p>banner</p>
-    </section>
-    <section class="tarjetas">
-        <p>tarjetas</p>
-    </section>
-    <section class="transacciones">
-        <p>transacciones</p>
-    </section>
+    </header>
 </body>
 </html>
