--- a/index.html
+++ b/index.html
@@ -54,35 +54,42 @@
         <section class="nosotros">
             <h1> FinanceFlex </h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores hic dicta facilis maiores alias corporis reiciendis, consequuntur facere suscipit omnis.</p>
-            <h2>Contamos con...</h2>
-        </section>
-        <section class="hacer">
-            <div class="col-1-item">
-                <div class="item">
-                    <img src="./public/img/money.png" alt="">
-                    <h1> Administrar</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+            <h2>Contamos con:</h2>
+        
+            <section class="hacer">
+                <div class="bloque">
+                    <div class="item">
+                        <img class="bloque__imagen" src="./public/img/money.png" alt="">
+                        <h1> Administación</h1>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                    </div>
                 </div>
-                <div class="item">
-                    <img src="./public/img/deposit.png" alt="">
-                    <h1> Depositar</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                <div class="col-1-item">
+                    <div class="item">
+                        <img class="bloque__imagen" src="./public/img/deposit.png" alt="">
+                        <h1> Depositos</h1>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="col-2-item">
-                <div class="item">
-                    <img src="./public/img/fees.png" alt="">
-                    <h1> Transacciones</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                <div class="col-1-item">
+                    <div class="item">
+                        <img class="bloque__imagen" src="./public/img/fees.png" alt="">
+                        <h1> Transacciones</h1>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                    </div>
                 </div>
-                <div class="item">
-                    <img src="./public/img/growth.png" alt="">
-                    <h1> Prestamos</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                <div class="col-1-item">
+                    <div class="item">
+                        <img class="bloque__imagen" src="./public/img/growth.png" alt="">
+                        <h1> Prestamos</h1>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                    </div>
                 </div>
-            </div>
+            </section>
         </section>
     </div>
+
+    
      <footer>
         <div class="footer-content">
             <h3>FinanceFlex</h3>
