--- a/main.html
+++ b/main.html
@@ -35,5 +35,12 @@
             <div class="linea"></div>
         </nav>
     </header>
+    <section class="banner">
+        <div class="logo">
+            <img src="public/img/logo_transparent.png" alt="logo">
+        </div>
+    </section>
+    <section class="tarjetas"></section>
+    <section class="transacciones"><p>Transacciones</p></section>
 </body>
 </html>
