--- a/main.html
+++ b/main.html
@@ -9,13 +9,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1+Code:wght@300;400&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/6dc1722754.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <script defer src="public/js/navbar.js"></script>
 </head>
 <body>
     <header class="header">
         <img class="logo" src="public/img/logito.png" alt="">
         <h1 class="h1">
-            <a href="#" class="a">FinanceFlex</a>
+            <a href="#" class="title-logo">FinanceFlex</a>
         </h1>
         <button class="button">
           <svg class="svg" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
@@ -35,12 +36,12 @@
             <div class="linea"></div>
         </nav>
     </header>
-    <section class="banner">
+    <!--class banner -->
+    <div class="container-fluid loan">
         <div class="logo">
             <img src="public/img/logo_transparent.png" alt="logo">
+            <img src="public/img/layer-colors.png" class="colors-layer">
         </div>
-    </section>
-    <section class="tarjetas"></section>
-    <section class="transacciones"><p>Transacciones</p></section>
+    </div>
 </body>
 </html>
