--- a/registro.html
+++ b/registro.html
@@ -55,7 +55,7 @@
         <div class="panels-container">
             <div class="panel left-panel">
                 <div class="content">
-                    <h3>Nuevo por aquí?</h3>
+                    <h3>¿Nuevo por aquí?</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, laboriosam.</p>
                     <button class="btn transparent" id="sign-up-btn">Registrate</button>
                 </div>
