--- a/main.html
+++ b/main.html
@@ -41,6 +41,7 @@
         <div class="logo">
             <img src="public/img/logo_transparent.png" alt="logo">
             <img src="public/img/layer-colors.png" class="colors-layer">
+            <img src="public/img/persona-dashboard.png" alt="">
         </div>
     </div>
 </body>
