--- a/registro.html
+++ b/registro.html
@@ -56,7 +56,7 @@
             <div class="panel left-panel">
                 <div class="content">
                     <h3>¿Nuevo por aquí?</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, laboriosam.</p>
+                    <p>Para poder registrarte en FinanceFlex es necesario acudir con uno de nuestros ejecutivos.</p>
                     <button class="btn transparent" id="sign-up-btn">Registrate</button>
                 </div>
                 <img src="./public/img/Character_2.png" class="image" alt="Imagen de ladaz3d en Freepik">
