--- a/main.html
+++ b/main.html
@@ -36,13 +36,56 @@
             <div class="linea"></div>
         </nav>
     </header>
-    <!--class banner -->
-    <div class="container-fluid loan">
-        <div class="logo">
-            <img src="public/img/logo_transparent.png" alt="logo">
-            <img src="public/img/layer-colors.png" class="colors-layer">
-            <img src="public/img/persona-dashboard.png" alt="">
+    <!--Main section-->
+    <section class="main">
+        <div class="banner">
+            <div class="log">
+                <img src="public/img/logito.png" alt="">
+                <h3>FinanceFlex</h3>
+            </div>
+            <div class="info">
+                <h2>¡Solicita un prestamo!</h2>
+                <p>Fácil y rápido</p>
+                <button type="button"><a href="prestamos.php">Solicitar ahora</a></button>
+            </div>
+            <div class="imagen">
+                <img src="public/img/bannerimg.png" alt="">
+            </div>
         </div>
-    </div>
+    </section>
+    <section class="det">
+        <div class="saldo">
+            <h3>Detalles de Saldo</h3>
+            <div class="line"></div>
+            <div class="fond">
+            </div>
+        </div>
+    </section>
+    <section class="trans">
+        <div class="tansacciones">
+            <h3>Transacciones</h2>
+            <div class="linne"></div>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Servicio</th>
+                        <th>Fecha</th>
+                        <th>Hora</th>
+                        <th>Pago</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Nombre</td>
+                        <td>30 Agosto</td>
+                        <td>9:00</td>
+                        <td class="warning">Pendiente</td>
+                        <td>Recibo</td>
+                    </tr>
+                </tbody>
+            </table>
+            <a href="#"><i class="fa-solid fa-chevron-down"></i></a>
+        </div>
+    </section>
 </body>
 </html>
