--- a/main.html
+++ b/main.html
@@ -58,12 +58,21 @@
             <h3>Detalles de Saldo</h3>
             <div class="line"></div>
             <div class="fond">
+                <div class="actual">
+                    <p>saldo</p>
+                </div>
+                <div class="ingreso">
+                    <p>ingresos grafica</p>
+                </div>
+                <div class="gasto">
+                    <p>gastos grafica</p>
+                </div>
             </div>
         </div>
     </section>
     <section class="trans">
-        <div class="tansacciones">
-            <h3>Transacciones</h2>
+        <div class="transacciones">
+            <h2>Transacciones</h2>
             <div class="linne"></div>
             <table>
                 <thead>
@@ -80,7 +89,21 @@
                         <td>30 Agosto</td>
                         <td>9:00</td>
                         <td class="warning">Pendiente</td>
-                        <td>Recibo</td>
+                        <td class="rec"><a href="#">Recibo</td></a>
+                    </tr>
+                    <tr>
+                        <td>Nombre</td>
+                        <td>30 Agosto</td>
+                        <td>9:00</td>
+                        <td class="warning">Pendiente</td>
+                        <td class="rec"><a href="#">Recibo</td></a>
+                    </tr>
+                    <tr>
+                        <td>Nombre</td>
+                        <td>30 Agosto</td>
+                        <td>9:00</td>
+                        <td class="warning">Pendiente</td>
+                        <td class="rec"><a href="#">Recibo</a></td>
                     </tr>
                 </tbody>
             </table>
