--- a/main.html
+++ b/main.html
@@ -26,10 +26,10 @@
         <nav class="nav">
             <div class="container">
                 <ul class="ul">
-                    <li class="li"><a href="#" class="a">Mi apartado</a></li>
-                    <li class="li"><a href="#" class="a">Prestamos</a></li>
-                    <li class="li"><a href="#" class="a">Ayuda</a></li>
-                    <li class="li"><a href="#" class="a">Configuración</a></li>
+                    <li class="li"><a href="main.html" class="a">Mi apartado</a></li>
+                    <li class="li"><a href="prestamos.html" class="a">Prestamos</a></li>
+                    <li class="li"><a href="ayuda.html" class="a">Ayuda</a></li>
+                    <li class="li"><a href="config.html" class="a">Configuración</a></li>
                     <li class="welcome">¡Bienvenido Gilberto!</li>
                 </ul>
             </div>
