detalles de saldo

--- a/main.html
+++ b/main.html
@@ -59,13 +59,21 @@
             <div class="line"></div>
             <div class="fond">
                 <div class="actual">
-                    <p>saldo</p>
+                    <div class="vectores">
+                        <img src="public/img/vectores.svg" alt="">
+                    </div>
+                    <div class="elipse">
+                        <div class="txt">
+                            <h6>$500.00</h6>
+                            <p>Saldo Actual</p>
+                        </div>  
+                    </div>
                 </div>
                 <div class="ingreso">
-                    <p>ingresos grafica</p>
+                    <p>Ingresos</p>
                 </div>
                 <div class="gasto">
-                    <p>gastos grafica</p>
+                    <p>Gastos</p>
                 </div>
             </div>
         </div>
