prestamos y pag principal

--- a/main.html
+++ b/main.html
@@ -60,7 +60,7 @@
             <div class="fond">
                 <div class="actual">
                     <div class="vectores">
-                        <img src="public/img/vectores.svg" alt="">
+                        <img src="public/img/vectores.png" alt="">
                     </div>
                     <div class="elipse">
                         <div class="txt">
@@ -96,22 +96,22 @@
                         <td>Nombre</td>
                         <td>30 Agosto</td>
                         <td>9:00</td>
-                        <td class="warning">Pendiente</td>
-                        <td class="rec"><a href="#">Recibo</td></a>
+                        <td class="warning">$1000.00</td>
+                        <td><input type="button" value="Recibo" class="btn-tabla"></input></td>
                     </tr>
                     <tr>
                         <td>Nombre</td>
                         <td>30 Agosto</td>
                         <td>9:00</td>
-                        <td class="warning">Pendiente</td>
-                        <td class="rec"><a href="#">Recibo</td></a>
+                        <td class="safe">$500.00</td>
+                        <td><input type="button" value="Recibo" class="btn-tabla"></input></a>
                     </tr>
                     <tr>
                         <td>Nombre</td>
                         <td>30 Agosto</td>
                         <td>9:00</td>
-                        <td class="warning">Pendiente</td>
-                        <td class="rec"><a href="#">Recibo</a></td>
+                        <td class="warning">$609.00</td>
+                        <td><input type="button" value="Recibo" class="btn-tabla"></input></td>
                     </tr>
                 </tbody>
             </table>
