--- a/prestamos.html
+++ b/prestamos.html
@@ -37,8 +37,71 @@
         </nav>
     </header>
     <section class="prest">
+        <h2>Prestamo</h2>
+        <div class="line"></div>
         <div class="prest-rec">
-            
+            <div class="tuprest">
+                <img src="public/img/prst1.png" alt="">
+                <div class="prestamo">
+                    <h5>$6558.75</h5>
+                    <p>Tu prestamo</p>
+                </div>
+            </div>
+            <div class="abono">
+                <img src="public/img/prst2.png" alt="">
+                <div class="adeudo">
+                    <h5>$558.75</h5>
+                    <p>Adeudo</p>
+                </div>
+            </div>
+            <div class="solicitar">
+                <a href="#"><h2>Solicitar Prestamo</h2></a>
+            </div>
+            <div class="abo">
+                <a href="#"><h2>Abonar</h2></a>
+            </div>
+        </div>
+    </section>
+    <section class="detalles">
+        <h2>Detalles</h2>
+        <div class="line"></div>
+        <div class="pago">
+            <h4>8 pagos de 10</h4>
+            <div class="line"></div>
+        </div>
+        <div class="datalles">
+            <table>
+                <thead>
+                    <tr>
+                        <td></td>
+                        <td>Fecha</td>
+                        <td>Hora</td>
+                        <td>Total</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Abono</td>
+                        <td class="chi">22 Mayo</td>
+                        <td class="chi">9:00</td>
+                        <td class="chi">$400</td>
+                    </tr>
+                    <tr>
+                        <td>Abono</td>
+                        <td class="chi">22 Mayo</td>
+                        <td class="chi">9:00</td>
+                        <td class="chi">$400</td>
+                    </tr>
+                    <tr>
+                        <td>Abono</td>
+                        <td class="chi">22 Mayo</td>
+                        <td class="chi">9:00</td>
+                        <td class="chi">$400</td>
+                    </tr>
+                </tbody>
+            </table>
+            <a href="#"><i class="fa-solid fa-chevron-down"></i></a>
         </div>
     </section>
 </body>
+</html>
