--- a/main.html
+++ b/main.html
@@ -40,7 +40,7 @@
     <section class="main">
         <div class="banner">
             <div class="log">
-                <img src="public/img/logito.png" alt="">
+                <img src="public/img/logito.png" alt="" >
                 <h3>FinanceFlex</h3>
             </div>
             <div class="info">
@@ -49,7 +49,7 @@
                 <button type="button"><a href="prestamos.php">Solicitar ahora</a></button>
             </div>
             <div class="imagen">
-                <img src="public/img/bannerimg.png" alt="">
+                <img src="public/img/bannerimg.png" alt=""  class="img">
             </div>
         </div>
     </section>
