--- a/config.html
+++ b/config.html
@@ -12,3 +12,49 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <script defer src="public/js/navbar.js"></script>
 </head>
+<body>
+    <header class="header">
+        <img class="logo" src="public/img/logito.png" alt="">
+        <h1 class="h1">
+            <a href="#" class="title-logo">FinanceFlex</a>
+        </h1>
+        <button class="button">
+          <svg class="svg" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+            </svg>
+        </button>
+        <nav class="nav">
+            <div class="container">
+                <ul class="ul">
+                    <li class="li"><a href="main.html" class="a">Mi apartado</a></li>
+                    <li class="li"><a href="prestamos.html" class="a">Prestamos</a></li>
+                    <li class="li"><a href="ayuda.html" class="a">Ayuda</a></li>
+                    <li class="li"><a href="config.html" class="a">Configuración</a></li>
+                    <li class="welcome">¡Bienvenido Gilberto!</li>
+                </ul>
+            </div>
+            <div class="linea"></div>
+        </nav>
+    </header>
+    <main>
+        <h1>Foto</h1>
+        <div class="line"></div>
+        <div class="load-photo">
+            <img src="" alt="">
+            <button class="cont-btn-file">
+                Cambiar
+                <label for="btn-file"></label>
+                <input type="file" id="btn-file">
+            </button>
+        </div>
+        <h1>Información Personal</h1>
+        <div class="line"></div>
+        <div class="person-dato">
+            <form action="">
+                <div class="bloque">
+                    
+                </div>
+            </form>
+        </div>
+    </main>
+</body>
