--- a/solicprest.html
+++ b/solicprest.html
@@ -40,6 +40,18 @@
         <div class="det-rec">
             <h2>Detalles</h2>
             <div class="dline"></div>
+        </div>
+        <div class="dettxt">
+            <p>Fecha del prestamo: 27/07/2022</p>
+            <p>Monto: $25,000.00</p>
+        </div>
+        <div class="dettxt1">
+            <p>Periodo: Mensual</p>
+            <p>Interés: 1.25%</p>
+        </div>
+        <div class="det2">
+            <p>Plazos: 8</p>
+        </div>
     </section>
     <section class="detalles1">
         <div class="datalles1">
