--- a/config.html
+++ b/config.html
@@ -41,7 +41,7 @@
         <div class="line"></div>
         <div class="load-photo">
             <img src="" alt="">
-            <button class="cont-btn-file">
+            <button class="contenedor-btn-file">
                 Cambiar
                 <label for="btn-file"></label>
                 <input type="file" id="btn-file">
@@ -52,7 +52,54 @@
         <div class="person-dato">
             <form action="">
                 <div class="bloque">
-                    
+                    <label for="nombres" class="labels">Nombre(s)</label>
+                    <p class="lineaF"></p>
+                    <input type="text" name="Nombres" id="nombres" class="inputs center">
+                </div>
+                <div class="bloque">
+                    <label for="apellidoM" class="labels">Apellido Materno</label>
+                    <p class="lineaF"></p>
+                    <input type="text" name="ApellidoM" id="apeM" class="inputs center">
+                </div>
+                <div class="bloque">
+                    <label for="apellidoP" class="labels">Apellido Paterno</label>
+                    <p class="lineaF"></p>
+                    <input type="text" name="ApelldoP" id="apeM" class="inputs center">
+                </div>
+                <div class="bloque">
+                    <label for="email" class="labels">Correo</label>
+                    <p class="lineaF"></p>
+                    <input type="email" name="correo" id="email" class="inputs center">
+                </div>
+                <div class="bloque">
+                    <label for="rfc" class="labels">RFC</label>
+                    <p class="lineaF"></p>
+                    <input type="text" name="rfc" id="rfc" class="inputs center">
+                </div>
+                <div class="bloque">
+                    <label for="fechaN" class="labels">Fecha de Nacimeinto</label>
+                    <p class="lineaF"></p>
+                    <input type="date" name="fechaN" id="fechaN" class="inputs center">
+                </div>
+                <div class="bloque">
+                    <label for="telefono" class="labels">Núemro de teléfono</label>
+                    <p class="lineaF"></p>
+                    <input type="number" name="telefono" id="Ntelefono" class="inputs center">
+                </div>
+                <div class="bloque">
+                    <label for="genero" class="labels">Género</label>
+                    <p class="lineaF"></p>
+                    <input type="text" name="genero" id="genero" class="inputs center">
+                </div>
+                <div class="bloque">
+                    <label for="curp" class="labels">CURP</label>
+                    <p class="lineaF"></p>
+                    <input type="text" name="curp" id="curp" class="inputs center">
+                </div>
+                <div class="bloque">
+                    <a href="#">Cambiar contraseña</a>
+                    <input type="submit" value="Restablecer" class="contenedor-btn-f">
+                    <input type="submit" value="Guardar" class="contenedor-btn-file">
                 </div>
             </form>
         </div>
