--- a/config.html
+++ b/config.html
@@ -38,17 +38,18 @@
     </header>
     <main>
         <h1>Foto</h1>
-        <div class="line"></div>
-        <div class="load-photo">
-            <img src="" alt="">
+        <div class="lineaR"></div>
+        <div class="loadphoto">
+            <img src="../FinanceFlex/public/img/Profile.png" alt="">
+            <p>ID: 2930930223</p>
             <button class="contenedor-btn-file">
                 Cambiar
                 <label for="btn-file"></label>
                 <input type="file" id="btn-file">
             </button>
         </div>
-        <h1>Información Personal</h1>
-        <div class="line"></div>
+        <h2>Información Personal</h2>
+        <div class="lineaR"></div>
         <div class="person-dato">
             <form action="">
                 <div class="bloque">
@@ -96,7 +97,7 @@
                     <p class="lineaF"></p>
                     <input type="text" name="curp" id="curp" class="inputs center">
                 </div>
-                <div class="bloque">
+                <div class="bloque1">
                     <a href="#">Cambiar contraseña</a>
                     <input type="submit" value="Restablecer" class="contenedor-btn-f">
                     <input type="submit" value="Guardar" class="contenedor-btn-file">
