--- a/ayuda.html
+++ b/ayuda.html
@@ -42,11 +42,44 @@
             <div class="fline"></div>
         </div>
         <div class="pregunt">
-            <p><i class="fa-solid fa-caret-down"></i>¿Cómo puedo crear una cuenta?</p>
-            <p><i class="fa-solid fa-caret-down"></i>¿Cómo solicito un prestamo?</p>
-            <p><i class="fa-solid fa-caret-down"></i>¿Cuánto es el interés?</p>
-        </div>
-        <div class="quest">
+            <div class="acordeon">
+                <div class="acordeon-it" id="faqs1">
+                    <a class="acordeon-link" href="#faqs1">
+                        ¿Cómo puedo crear una cuenta?
+                        <i class="fa-solid fa-caret-down">
+                        <i class="fa-solid fa-caret-up"></i></i>
+                    </a>
+                    <div class="resp">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, ipsa obcaecati sed esse aut earum, praesentium autem nulla molestias voluptates error nobis delectus neque quas, perspiciatis eveniet! Unde ab quisquam temporibus cumque sint quidem non ea. Tempore corporis doloremque iure ipsum sunt consectetur velit iste recusandae, odio suscipit totam hic praesentium quisquam! Voluptas nulla rem reiciendis adipisci.
+                        </p>
+                    </div>
+                </div>
+                <div class="acordeon-it" id="faqs2">
+                    <a class="acordeon-link" href="#faqs2">
+                        ¿Cómo solicito un prestamo?
+                        <i class="fa-solid fa-caret-down">
+                        <i class="fa-solid fa-caret-up"></i></i>
+                    </a>
+                    <div class="resp">
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione placeat deleniti necessitatibus quis nihil totam voluptatem impedit quam ea consequatur!
+                        </p>
+                   </div>
+                </div>
+                <div class="acordeon-it" id="faqs3">
+                    <a class="acordeon-link" href="#faqs3">
+                        ¿Cuánto es el interés?
+                        <i class="fa-solid fa-caret-down">
+                        <i class="fa-solid fa-caret-up"></i></i>
+                    </a>
+                    <div class="resp">
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione placeat deleniti necessitatibus quis nihil totam voluptatem impedit quam ea consequatur!
+                        </p>
+                        </div>
+                </div>
+            </div>
         </div>
     </section>
 </body>
